# matter-esp32-octopus-energy-gateway

./: README.md
Configuration/: index.html
Firmware/: .gitignore  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
Firmware/main/: CMakeLists.txt  Kconfig.projbuild  agile_tariff_delegate.cpp  agile_tariff_delegate.h  app_main.cpp  app_main.h  simple_tariff_delegate.cpp  simple_tariff_delegate.h
